--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,12 @@
         "strict": true,
         "strictNullChecks": true,
         "skipLibCheck": true
-    }
+    },
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.tsx"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
