--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.3.2"
+    "dotenv": "^16.3.2",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
