--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,8 @@
         "strictNullChecks": true,
         "skipLibCheck": true
     },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.tsx"
-    ],
+    "include": ["src/**/*"],
+
     "exclude": [
         "node_modules"
     ]
