--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/express": "^4.17.21",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "node": "^22.3.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
