--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.2",
     "express": "^4.19.2",
+    "grunt-ts": "^6.0.0-beta.22",
     "node": "^22.3.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "grunt": "^1.6.1",
     "tsup": "^8.0.1",
     "tsx": "^4.15.6",
     "typescript": "^5.3.3"
