--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.2",
     "express": "^4.19.2",
-    "grunt-ts": "^6.0.0-beta.22",
+    "grunt-ts": "^5.5.1",
     "node": "^22.3.0"
   },
   "devDependencies": {
